# hh.ru-parsing

./: README.md  pyproject.toml
src/: hh_abstract_class.py  hh_parsing.py  main.py  saving_information.py  user_function.py  vacancies.py
tests/: conftest.py  test_hh_parsing.py  test_saving_information.py  test_vacanscies.py
